# IRRS-labs

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: build.yaml
lab1/: .envrc  .gitignore  CountUnique.py  CountWords.py  HeapsPlots.py  IndexFiles.py  SearchIndex.py  ZipfPlots.py  common.py  compute_heaps.sh  elastic_test.py  process.py  report.md
lab1/data/: compute_uniq.sh  split.sh  symlink_farm.sh  uniq_data.txt
lab1/data/novels/: titles.csv
lab1/results/: heaps.csv
lab2/: .envrc  .gitignore  001-preamble.tex  010-modi.tex  020-compu.tex  CountWords.py  CountWords_par.py  IndexFilesPreprocess.py  IndexFilesPreprocess_par.py  TFIDFViewer.py  TFIDF_experiment.py  biblio.bib  common.py  experiments.py  filters.sh  plotsFirstPart.py  process.py  report.md  report.tex  tokenizers.sh
lab2/results/: filters_arxiv.csv  filters_newsgroups.csv  filters_novels.csv  tokenizers_20_newsgroups.csv  tokenizers_arxiv_abs.csv  tokenizers_novels.csv  zipf_novel_las.csv  zipf_novel_lass.csv
lab3/: .envrc  .gitignore  005-titlepage.tex  010-content.tex  090-appendix.tex  PageRank.py  benchmark.py  output.txt  output_08.txt  process.py  report.tex  results.csv
lab3/lua/: boxplot.lua
lab4/: .envrc  .gitignore  .latexmkrc  001-preamble.tex  005-titlepage.tex  010-content.tex  010-implementation.tex  020-experimentation.tex  030-results.tex  ExtractData.py  ExtractDataPre.py  GeneratePrototypes.py  IndexFiles.py  MRKmeans.py  MRKmeansStep.py  MRWordCount.py  ProcessResults.py  StreamDocs.py  compute_table.awk  compute_table.sh  extract_data.sh  kmeans.sh  kmeans_cores.sh  kmeans_ncores.awk  parameters_extract_data.sh  plots.py  process.py  prototypes.sh  report.tex  show_clusters.sh
lab4/results/: ncores_100_0.01_0.02.csv  ncores_250_0.01_0.02.csv  stats.csv  stats2.csv  stats3.csv
lab5/: .envrc  .gitignore  001-preamble.tex  010-content.tex  010-models.tex  020-custom.tex  Part1-Barbasi-Albert.py  build_network.py  part1.ipynb  part2-Watts-Strogatz.Rmd  part2.ipynb  process.py  report.tex
