[tool.poetry]
name = "IRRS-lab-exercises"
version = "0.1.0"
description = "Laboratory exercises for Information Retrieval and Recommender Systems"
authors = ["LeixB <abone9999@gmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
matplotlib = "^3.5.3"
pandas = "^1.5.0"
seaborn = "^0.12.0"
numpy = "^1.23.3"
scipy = "<1.9"
nbformat = "<5.6.0"

[tool.poetry.group.dev.dependencies]
python-lsp-server = {extras = ["all"], version = "^1.5.0"}
pylsp-mypy = "^0.6.2"
pyls-isort = "^0.2.2"
python-lsp-black = "^1.2.1"
pyls-memestra = "^0.0.16"
pylsp-rope = "^0.1.10"
nbconvert = "<7.0.0" # v7 does not build with poetry2nix
ipython = "^8.5.0"
pandas-stubs = "^1.4.4"
elasticsearch-stubs = "^0"
notebook = "^6.4.12"

[tool.poetry.group.lab1.dependencies]
elasticsearch-dsl = "^7.4.0"
elasticsearch = "<8.0.0"
Unidecode = "^1.3.4"

[tool.poetry.group.lab2.dependencies]
elasticsearch-dsl = "^7.4.0"
elasticsearch = "<8.0.0"
wordcloud = "^1.8.2.2"

[tool.poetry.group.lab3.dependencies]
polars = "^0.14.23"
altair = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
